# AkiraE

./: OCRE_Optimization_Analysis.md  README.md  ocre_common_optimized.c  ocre_common_optimized.h
0. HW/Akira Basic/: BOM_PCB_Akira_Basic_2024-01-05.csv  PCB_Akira_Basic_2024-01-05.pcbdoc  PCB_PCB_Akira_Basic_2024-01-05.json  PickAndPlace_PCB_Akira_Basic_2024-01-05.csv  SCH_Akira Basic_2024-01-05.json
0. HW/Akira Joystick/: BOM_PCB_Akira_Joystick_2024-01-05.csv  PCB_Akira_Joystick_2024-01-05.pcbdoc  PCB_PCB_Akira_Joystick_2024-01-05.json  PickAndPlace_PCB_Akira_Joystick_2024-01-05.csv  SCH_Akira Joystick_2024-01-05.json
0. HW/Akira f1/: BOM_PCB_Akira_f1_2024-01-05.csv  PCB_Akira_f1_2024-01-05.pcbdoc  PCB_PCB_Akira_f1_2024-01-05.json  PickAndPlace_PCB_Akira_f1_2024-01-05.csv  SCH_Akira f1_2024-01-05.json  Sheet_1_2024-01-05.schdoc
1. SW/AkiraUpdater/: AkiraUpdater.py
1. SW/NofrendoAkira/: README.md
1.SW/AkiraNofrendoNes/: CMakeLists.txt
1.SW/AkiraNofrendoNes/main/: CMakeLists.txt  main.c
1.SW/AkiraNofrendoNes/main/menu/: charPixels.c  menu.c
1.SW/AkiraNofrendoNes/main/nofrendo/: config.c  event.c  gui.c  intro.h  memguard.h  nofrendo.c  noftypes.h
1.SW/AkiraNofrendoNes/main/nofrendo-esp32/: psxcontroller.c  video_audio.c
1.SW/AkiraNofrendoNes/main/nofrendo/cpu/: nes6502.c
1.SW/AkiraNofrendoNes/main/nofrendo/libsnss/: libsnss.c
1.SW/AkiraNofrendoNes/main/nofrendo/mappers/: map000.c  map001.c  map002.c  map003.c  map004.c  map005.c  map007.c  map008.c  map009.c  map011.c  map015.c  map016.c  map018.c  map019.c  map024.c  map032.c  map033.c  map034.c  map040.c  map041.c  map042.c  map046.c  map050.c  map064.c  map065.c  map066.c  map070.c  map073.c  map075.c  map078.c  map079.c  map085.c  map087.c  map093.c  map094.c  map099.c  map160.c  map229.c  map231.c  mapvrc.c
1.SW/AkiraNofrendoNes/main/nofrendo/nes/: mmclist.c  mmclist.h  nes.c  nes.h  nes_mmc.c  nes_mmc.h  nes_pal.c  nes_ppu.c  nes_ppu.h  nes_rom.c  nesinput.c  nesstate.c  nesstate.h
1.SW/AkiraNofrendoNes/main/nofrendo/sndhrdw/: fds_snd.c  mmc5_snd.c  mmc5_snd.h  nes_apu.c  nes_apu.h  vrcvisnd.c  vrcvisnd.h
1.SW/AkiraUpdater/: AkiraUpdater.py
2. Design and 3D Models/3d Models/: AkiraE.shapr
2. Design and 3D Models/3d Models/AkiraD/: Akira prototype.stl  AkiraDBody.3mf  AkiraDTop.3mf  small.3mf
2. Design and 3D Models/3d Models/rev1/: AkiraE.3mf  AkiraE.step
2. Design and 3D Models/Drawings/: AkiraE-AkiraE Housing Drawing.dwg
2. Design and 3D Models/PCB 3d Model Mesh bodies/OBJ_PCB_Akira_Basic_2024-01-04/: OBJ_PCB_Akira_Basic.mtl
2. Design and 3D Models/PCB 3d Model Mesh bodies/OBJ_PCB_Akira_Joystick_2024-01-04/: OBJ_PCB_Akira_Joystick.mtl
