idf_component_register(SRCS "main.c" "menu/charData.c" "menu/charPixels.c" "menu/decode_image.c" "menu/iconData.c" "menu/iconData.c" "menu/menu.c"
                    "nofrendo/cpu/dis6502.c" "nofrendo/cpu/nes6502.c" "nofrendo/libsnss/libsnss.c" "nofrendo/mappers/mapvrc.c" "nofrendo/mappers/map000.c"
                    "nofrendo/mappers/map001.c"
                    "nofrendo/mappers/map002.c"
                    "nofrendo/mappers/map003.c"
                    "nofrendo/mappers/map004.c"
                    "nofrendo/mappers/map005.c"
                    "nofrendo/mappers/map007.c"
                    "nofrendo/mappers/map008.c"
                    "nofrendo/mappers/map009.c"
                    "nofrendo/mappers/map011.c"
                    "nofrendo/mappers/map015.c"
                    "nofrendo/mappers/map016.c"
                    "nofrendo/mappers/map018.c"
                    "nofrendo/mappers/map019.c"
                    "nofrendo/mappers/map024.c"
                    "nofrendo/mappers/map032.c"
                    "nofrendo/mappers/map033.c"
                    "nofrendo/mappers/map034.c"
                    "nofrendo/mappers/map040.c"
                    "nofrendo/mappers/map041.c"
                    "nofrendo/mappers/map041.c"
                    "nofrendo/mappers/map046.c"
                    "nofrendo/mappers/map050.c"
                    "nofrendo/mappers/map064.c"
                    "nofrendo/mappers/map065.c"
                    "nofrendo/mappers/map066.c"
                    "nofrendo/mappers/map070.c"
                    "nofrendo/mappers/map073.c"
                    "nofrendo/mappers/map075.c"
                    "nofrendo/mappers/map078.c"
                    "nofrendo/mappers/map079.c"
                    "nofrendo/mappers/map085.c"
                    "nofrendo/mappers/map087.c"
                    "nofrendo/mappers/map093.c"
                    "nofrendo/mappers/map094.c"
                    "nofrendo/mappers/map099.c"
                    "nofrendo/mappers/map160.c"
                    "nofrendo/mappers/map229.c"
                    "nofrendo/mappers/map231.c"
                    "nofrendo/nes/mmclist.c"
                    "nofrendo/nes/nes_mmc.c"
                    "nofrendo/nes/nes_pal.c"
                    "nofrendo/nes/nes_ppu.c"
                    "nofrendo/nes/nes_rom.c"
                    "nofrendo/nes/nes.c"
                    "nofrendo/nes/nesinput.c"
                    "nofrendo/nes/nesstate.c"
                    "nofrendo/sndhrdw/fds_snd.c"
                    "nofrendo/sndhrdw/mmc5_snd.c"
                    "nofrendo/sndhrdw/nes_apu.c"
                    "nofrendo/sndhrdw/vrcvisnd.c"
                    "nofrendo/bitmap.c"
                    "nofrendo/config.c"
                    "nofrendo/event.c"
                    "nofrendo/gui_elem.c"
                    "nofrendo/gui.c"
                    "nofrendo/intro.c"
                    "nofrendo/log.c"
                    "nofrendo/memguard.c"
                    "nofrendo/nofrendo.c"
                    "nofrendo/pcx.c"
                    "nofrendo/vid_drv.c"
                    "nofrendo-esp32/osd.c"
                    "nofrendo-esp32/psxcontroller.c"
                    "nofrendo-esp32/spi_lcd.c"
                    "nofrendo-esp32/video_audio.c"
                    INCLUDE_DIRS "." "menu" "nofrendo" "nofrendo-esp32")